# python-boilerplate

./: .bumpversion.toml  .dockerignore.jinja  .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-config.yaml.jinja  .prettierrc.toml  CHANGELOG.md  Makefile  README.md  README.md.jinja  copier.yml  docker-compose.yml.jinja  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja  setup.py.jinja
dockerfiles/{{ project_name }}/: Dockerfile.jinja
docs/: index.md.jinja
environments/: mysql.env.jinja
makefiles/: documentation.mk  git.mk  project.mk  python.mk  release.mk
requirements/: development.in
tests/: conftest.py  test_development_environment.py
