[project]
name = "python-boilerplate"
version = "0.1.0"
description = "Python project template managed with Copier."
readme = "README.md"
requires-python = ">=3.12"


[tool.bandit]
exclude_dirs = ["tests", "tests"]

[tool.commitizen]
bump_message = "release $current_version → $new_version"
update_changelog_on_bump = false
version = "0.1.0"
version_provider = "commitizen"
version_scheme = "semver"
version_files = [
    "pyproject.toml",
    "setup.py:version",
    "docs/index.md"
]
